<resources>
    <string name="app_name">MovieSearch</string>
    <string name="sort_hint">Sort</string>
    <string name="search_hint">Search</string>
    <string name="settings_hint">Setting</string>
    <string name="share_hint">Share</string>
    <string name="about_app">About app</string>
    <string name="main">Main</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="movie_id">ID</string>
    <string name="movie_rank">Rank</string>
    <string name="title">Title</string>
    <string name="movie_year">Year</string>
    <string name="crew_title">Crew</string>
    <string name="imdbrating_label" translatable="false">imDbRating</string>
    <string name="reload">Reload</string>
</resources>