<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/detiles_fragment_margin"
    tools:context=".ui.main.detailes.DetailsFragment">

    <TextView
        android:id="@+id/movie_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/movie_id_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/movie_rank_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_rank"
        app:layout_constraintTop_toBottomOf="@id/movie_id_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/movie_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/movie_id"
        app:layout_constraintStart_toEndOf="@id/movie_rank_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/movie_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@id/movie_rank_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/movie_rank"
        app:layout_constraintStart_toEndOf="@id/movie_title_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/movie_year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_year"
        app:layout_constraintTop_toBottomOf="@id/movie_title_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/movie_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/movie_title"
        app:layout_constraintStart_toEndOf="@id/movie_year_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/movie_crew_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crew_title"
        app:layout_constraintTop_toBottomOf="@id/movie_year_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/movie_crew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="10"
        app:layout_constraintTop_toBottomOf="@id/movie_year"
        app:layout_constraintStart_toEndOf="@id/movie_crew_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/movie_imDbRating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imdbrating_label"
        app:layout_constraintTop_toBottomOf="@id/movie_crew"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/movie_imDbRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/movie_crew"
        app:layout_constraintStart_toEndOf="@id/movie_imDbRating_label"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>